<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gamepad_emulation</name>
  <version>0.0.0</version>
  <description>Gamepad emulation with keyboard</description>
  <maintainer email="maximilian.ehrhardt@esa.int">root</maintainer>
  <license>GPLv3</license>

  <depend>pynput-pip</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
